# mcp-sentiment

./: .env  README.md  app.py  pyproject.toml
.continue/mcpServers/: new-mcp-server.yaml
.continue/models/: local-models.yaml
models/: config.yaml
