[project]
name = "mcp-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio[mcp]>=4.44.1",
    "llama-cpp-python>=0.3.16",
    "mcp[cli]",
    "pydantic-settings>=2.11.0",
    "sse-starlette>=3.0.2",
    "starlette-context>=0.4.0",
    "textblob>=0.19.0",
]
